--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id="container">
 			<div id="logoArea">
 			
-			<img src="C:\Users\Mary Joy\OneDrive\Pictures\Images\logo.jpg">
+			<img src="Images\logo.jpg">
 			<h3>Registration Page</h3>
 			
 
